<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.gmail.appverstas.privatetaskmanagerapp.ui.RegisterFragment"
        android:label="@string/fragment_title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.gmail.appverstas.privatetaskmanagerapp.ui.LoginFragment"
        android:label="@string/fragment_title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
    </fragment>
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.gmail.appverstas.privatetaskmanagerapp.ui.TasksFragment"
        android:label="@string/fragment_title_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.gmail.appverstas.privatetaskmanagerapp.ui.AddEditTaskFragment"
        android:label="@string/fragment_add_edit_task_title"
        tools:layout="@layout/fragment_add_edit_task" >
        <action
            android:id="@+id/action_addEditTaskFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            app:popUpTo="@id/addEditTaskFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.gmail.appverstas.privatetaskmanagerapp.ui.TaskDetailFragment"
        android:label="@string/fragment_task_detail_title"
        tools:layout="@layout/fragment_task_detail" >
        <action
            android:id="@+id/action_taskDetailFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>
</navigation>